--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,63 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.active {
+    transition: 0.25s ease-in-out all;
+    position: relative;
+}
+.active:hover::after {
+    content: "";
+    width: 100%;
+    height: 2px;
+    background: #000;
+    bottom: -17px;
+    left: 0;
+    position: absolute;
+}
+.cat-img{
+    transition: 0.25s ease-in-out all;}
+.cat-img:hover .bg-overlay{    
+    visibility: visible;
+    transition: 0.25s ease-in-out all;
+}
+.bg-overlay {
+    visibility: hidden;
+    transition: 0.25s ease-in-out all;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: rgb(0 0 0 / 23%);
+    left: 0;
+    top: 0;
+}
+
+.save-file, .patch{
+    transition: 0.25s ease-in-out all;
+    visibility: hidden;
+}
+.cat-img:hover .save-file{
+    visibility: visible;
+}
+
+.cat-img:hover .patch{
+    visibility: visible;
+}
+
+
+
+
+.header.menuopen .phone-menu{
+    transform: translateX(0) !important;
+}
+.header .menu {
+    transform: translateX(-100rem);
 }
